Improve UI with gradient branding and button effects

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,5 +16,5 @@
 
 body {
     color: rgb(var(--foreground-rgb));
-    background: rgb(var(--background-rgb));
+    background: linear-gradient(to bottom, rgb(var(--background-rgb)), rgb(15,23,42));
 }
